[gd_scene load_steps=3 format=3 uid="uid://wht36wkuxpbu"]

[ext_resource type="Texture2D" uid="uid://c67q1y1d3pk0c" path="res://assets flap/assets/textures/message - Copy.png" id="1_4lek5"]
[ext_resource type="Script" path="res://UI/menu_layer.gd" id="1_4oy0v"]

[node name="MenuLayer" type="CanvasLayer"]
script = ExtResource("1_4oy0v")

[node name="StartMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartMessage" type="TextureRect" parent="StartMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -303.0
offset_right = 142.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4lek5")

[node name="GameOverMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
